<resources>
    <string name="app_name">Massage_PRO</string>
    <string name="service_fields_empty_error">Заповніть всі поля</string>
    <string name="filter_category_hint">Фильтр по категории</string>
    <string name="service_failed_toast">Помилка при збереженні</string>
    <string name="title_home">Головна</string>
    <string name="title_clients">Клієнти</string>
    <string name="title_services">Послуги</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_add_edit_client">Додати/Редагувати клієнта</string>
    <string name="title_add_edit_service">Додати/Редагувати послугу</string>
    <string name="title_add_edit_appointment">Додати/Редагувати запис</string>
    <string name="service_details_format">%1$d грн, %2$d хв</string>
    <string name="appointment_status_scheduled">Заплановано</string>
    <string name="appointment_status_completed">Завершено</string>
    <string name="service_price_prefix">Вартість: %s грн</string>
 <string name="appointment_status_cancelled">Скасовано</string>
    <string name="appointment_status_no_show">Неявка</string>
    <string-array name="appointment_statuses">
        <item>Всі</item>
        <item>Заплановано</item>
        <item>Скасовано</item>
        <item>Завершено</item>
    </string-array>
    <string name="action_edit">Редагувати</string>
    <string name="action_delete">Видалити</string>
    <string name="action_reschedule">Перенести</string>
    <string name="action_mark_completed">Позначити як завершену</string>
    <string name="action_mark_cancelled">Позначити як скасовану</string>
    <string name="action_mark_no_show">Позначити як неявку</string>
    <string name="contacts_permission_denied">Дозвіл на читання контактів відхилено.</string>
    <string name="contacts_permission_title">Дозвіл на контакти</string>
    <string name="contacts_permission_message">Для імпорту клієнтів з вашої телефонної книги застосунку потрібен доступ до контактів.</string>
    <string name="contacts_permission_grant_button">Надати</string>
    <string name="contact_details_not_found">Не вдалося отримати ім\'я або номер телефону контакту.</string>
    <string name="contact_no_phone_number">У вибраного контакту немає номера телефону.</string>
    <string name="contact_phone_query_error">Помилка при запиті даних телефону контакту.</string>
    <string name="contact_id_not_found">Не вдалося отримати ID контакту.</string>
    <string name="permission_required_title">Потрібен дозвіл</string>
    <string name="permission_required_message">Для імпорту контактів потрібен дозвіл на доступ до контактів. Будь ласка, надайте його в налаштуваннях застосунку.</string>
    <string name="go_to_settings_button">Перейти до налаштувань</string>
    <string name="save_service_button">Зберегти послугу</string>
    <string name="save_appointment_button_text">Зберегти запис</string>
    <string name="add_new_client_button">Додати нового клієнта</string>
    <string name="select_date_button">Вибрати дату</string>
    <string name="select_time_button">Вибрати час</string>
    <string name="book_button_text">Забронювати</string>
    <string name="delete_button_text">Видалити</string>
    <string name="cancel_button_text">Скасувати</string>
    <string name="appointment_status_prefix">Статус: %1$s</string>
    <string name="service_deleted_toast">Послугу %1$s видалено.</string>
    <string name="create_appointment_button_text">Створити запис</string>
    <string name="add_client_description">Додати нового клієнта</string>
    <string name="service_hint">Оберіть послугу</string>
    <string name="total_appointments_prefix">Всього записів: %d</string>
 <string name="total_revenue_prefix_stats">Загальна виручка: %s грн</string>
 <string name="most_popular_service_prefix">Найпопулярніша послуга: %1$s</string>
    <string name="most_active_client_prefix">Найактивніший клієнт: %1$s</string>
    <string name="delete_client_confirmation_title">Видалити клієнта?</string>
    <string name="delete_client_confirmation_message">Ви впевнені, що хочете видалити клієнта %1$s?</string>
    <string name="client_notes_hint">Нотатки про клієнта</string>
    <string name="search_clients_hint">Пошук клієнтів&#8230;</string>
    <string name="statistics_title">Статистика</string>
    <string name="start_date_button">Початкова дата</string>
    <string name="end_date_button">Кінцева дата</string>
    <string name="chip_day">День</string>
    <string name="chip_week">Тиждень</string>
    <string name="total_appointments_placeholder">Всього записів: %s</string>
 <string name="total_revenue_placeholder">Загальна виручка: %s грн</string>
 <string name="most_popular_service_placeholder">Найпопулярніша послуга: %s</string>
    <string name="most_active_client_placeholder">Найактивніший клієнт: %s</string>
    <string name="search_client_hint">Пошук за ім\'ям або телефоном</string>
    <string name="search_service_hint">Пошук за назвою послуги</string>
    <string name="add_client_content_description">Додати клієнта</string>
    <string name="add_service_content_description">Додати послугу</string>
    <string name="prev_day_content_description">Попередній день</string>
    <string name="next_day_content_description">Наступний день</string>
    <string name="select_client_hint">Оберіть клієнта</string>
    <string name="select_service_hint">Оберіть послугу</string>
    <string name="appointment_duration_hint">Тривалість (хв)</string>
    <string name="appointment_price_hint">Вартість (грн)</string>
    <string name="notes_hint">Нотатки</string>
    <string name="date_hint">Дата</string>
    <string name="time_hint">Час</string>
    <string name="service_base_price_hint">Базова вартість (грн)</string>
    <string name="service_duration_minutes_hint">Тривалість (хвилини)</string>
    <string name="service_category_hint">Категорія</string>
    <string name="select_category_hint">Виберіть категорію або введіть нову</string>
    <string name="service_custom_category_hint">Введіть нову категорію</string>
    <string name="service_active_switch">Активна</string>
    <string name="service_status_description">Статус послуги</string>
    <string name="edit_service_description">Редагувати послугу</string>
    <string name="delete_service_description">Видалити послугу</string>
    <string name="edit_appointment_description">Редагувати запис</string>
    <string name="delete_appointment_description">Видалити запис</string>
    <string name="action_dialog_title">Дії з записом</string>
    <string name="delete_confirmation_title">Підтвердження видалення</string>
    <string name="delete_confirmation_message">Ви впевнені, що хочете видалити цей запис?</string>
    <string name="delete_client_dialog_title">Видалити клієнта</string>
    <string name="delete_client_dialog_message">Ви впевнені, що хочете видалити клієнта %1$s? Всі його записи будуть збережені, але клієнт буде видалений зі списку.</string>
    <string name="delete_service_dialog_title">Видалити послугу</string>
    <string name="delete_service_dialog_message">Послуга \"%1$s\" використовується в X записах. Видалення призведе до втрати зв\'язку з цими записами. Продовжити?</string>
    <string name="client_name_empty_error">Ім\'я не може бути порожнім</string>
    <string name="phone_format_error_flexible">Некоректний формат телефону (наприклад, 0961234567)</string>
    <string name="category_not_found_message">Категория \"%1$s\" не найдена в предопределенных. Поле категории было сброшено.</string>
    <string name="client_added_toast">Клієнт доданий</string>
    <string name="client_updated_toast">Клієнт оновлений</string>
    <string name="client_deleted_toast">Клієнта %1$s видалено.</string>
    <string name="client_name_phone_empty_error">Будь ласка, введіть ім\'я та телефон клієнта.</string>
    <string name="service_added_toast">Послугу додано</string>
    <string name="service_updated_toast">Послугу оновлено</string>
    <string name="appointment_rescheduled_toast">Запис перенесено.</string>
    <string name="appointment_status_updated_toast">Статус запису оновлено.</string>
    <string name="appointment_added_toast">Запис додано.</string>
    <string name="appointment_updated_toast">Запис оновлено.</string>
    <string name="service_invalid_data_toast">Некоректні дані для ціни або тривалості</string>
    <string name="toast_select_client_service">Будь ласка, оберіть клієнта та послугу.</string>
    <string name="toast_past_time_error">Неможливо створити запис на минулий час.</string>
    <string name="toast_conflicting_appointment">Обраний час перетинається з існуючими записами.</string>
    <string name="appointment_created_toast">Запис успішно створено!</string>
    <string name="past_appointment_error">Неможливо створити запис на минулий час.</string>
    <string name="conflicting_appointment_error">Запис на цей час вже існує.</string>
    <string name="appointment_fields_empty_error">Будь ласка, заповніть усі обов\'язкові поля запису.</string>
    <string name="appointment_invalid_numeric_error">Тривалість має бути цілим числом більше 0, вартість - невід\'ємним числом.</string>
    <string name="service_category_empty_error">Будь ласка, оберіть або введіть категорію.</string>
    <string name="service_invalid_numeric_error">Тривалість має бути цілим числом більше 0, вартість - невід\'ємним числом.</string>
    <string name="client_hint">Клієнт</string>
    <string name="service_prefix">Послуга: %1$s</string>
    <string name="cost_prefix">Вартість: %1$d грн</string>
    <string name="status_prefix">Статус: %1$s</string>
    <string name="client_prefix">Клієнт: %1$s</string>
    <string name="unknown_client">Невідомий клієнт</string>
    <string name="unknown_service">Невідома послуга</string>
    <string name="no_data">Немає даних</string>
    <string name="select_date">Виберіть дату</string>
    <string name="select_time">Виберіть час</string>
    <string name="occupied_slot_info_full">%1$s (%2$s), Вартість: %3$d грн</string>
    <string name="select_client_label">Вибір клієнта:</string>
    <string name="select_service_label">Вибір послуги:</string>
    <string name="select_date_time_label">Вибір дати та часу:</string>
    <string name="selected_date_time_prefix">Вибрано:</string>
    <string name="total_cost_prefix">Підсумкова вартість:</string>
    <string name="total_cost_sunday_surcharge_suffix"> (+100 грн за неділю)</string>
    <string name="appointments_count_prefix">Записів на сьогодні: %1$d</string>
    <string name="total_revenue_prefix">Загальна виручка: %s грн</string>
 <string name="occupied_slot_info_prefix">Зайнято:</string>
    <string name="unknown_client_service">Невідомо</string>
    <string name="selected_date_time_format">Обрано: %1$s, %2$s</string>
    <string name="total_cost_sunday_format">Загальна вартість (неділя): %1$d</string>
    <string name="total_cost_format">Загальна вартість: %1$d</string>
    <string name="total_cost_default">Підсумкова вартість: 0 грн</string>
    <string name="backup_button">Резервне копіювання</string>
    <string name="restore_button">Відновлення</string>
    <string name="backup_success">Базу даних успішно збережено</string>
    <string name="backup_error">Помилка резервного копіювання: %1$s</string>
    <string name="no_chart_data_appointments">Немає даних про записи за обраний період.</string>
    <string name="no_chart_data_revenue">Немає даних про виручку за обраний період.</string>
    <string name="chart_title_appointments_by_period">Кількість записів по періодах</string>
    <string name="chart_title_revenue_by_category">Виручка по категоріях послуг</string>
    <string name="chip_month">Місяць</string>
    <string name="chip_3_months">3 місяці</string>
    <string name="chip_year">Рік</string>
    <string name="chip_all_time">Весь час</string>
    <string name="drilldown_back">Назад</string>
    <string name="chip_6_months">6 місяців</string>
</resources>