<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_clients"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_clients" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_stats_black_24dp"
        android:title="@string/title_statistics" />

</menu>

